Add Bank Summary Opening Balance feature with deduction formula matching frontend calculation

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -428,6 +428,8 @@
                                                 class="checkbox-label" for="cash_counter">Cash Counter</label></li>
                                         <li><input type="checkbox" id="closing_sheet" class="form-check-input"><label
                                                 class="checkbox-label" for="closing_sheet">Closing Sheet</label></li>
+                                        <li><input type="checkbox" id="zakat_entry" class="form-check-input"><label
+                                                class="checkbox-label" for="zakat_entry">Zakat Entry</label></li>
                                     </ul>
                                 </li>
                                 <li>
